--- a/company.html
+++ b/company.html
@@ -42,7 +42,7 @@
     <nav>
       <ul>
         <li><a href="index.html">トップページ</a></li>
-        <li><a href="#">製造工程</a></li>
+        <li><a href="process.html">大黒キムチができるまで</a></li>
         <li><a href="#">関連会社</a></li>
         <li><a href="company.html">会社概要</a></li>
       </ul>
