--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header>
     <div class="container">
-      <a href="">
+      <a href="index.html">
         <h1>
           <img src="img/logo.png" alt="幸-Coo Company" width="75" height="75">
         </h1>
@@ -42,7 +42,7 @@
     <nav>
       <ul>
         <li><a href="index.html">トップページ</a></li>
-        <li><a href="#">製造工程</a></li>
+        <li><a href="process.html">大黒キムチができるまで</a></li>
         <li><a href="#">関連会社</a></li>
         <li><a href="company.html">会社概要</a></li>
       </ul>
@@ -137,14 +137,6 @@
           <p>会社員(32)</p>
         </footer>
       </section>
-    </div>
-  </section>
-
-  <section class="shop-info">
-    <h2>店舗情報</h2>
-    <div class="container">
-      <img src="img/shop.jpg" alt="店舗画像">
-      <p>〒000-0000　熊本県●市●町1-11-1</p>
     </div>
   </section>
 
