--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <img src="img/logo.png" alt="幸-Coo Company" width="75" height="75">
         </h1>
       </a>
-      <nav>
+      <nav class="sp-menu">
         <ul>
           <li>
             <a href="tel:0120-000-000">
@@ -34,6 +34,14 @@
           </li>
         </ul>
       </nav>
+      <div class="pc-menu">
+        <ul>
+          <li><a href="process.html">こだわり</a></li>
+          <li><a href="associated.html">関連企業</a></li>
+          <li><a href="company.html">会社概要</a></li>
+          <li><a href="tel:0120-000-000" class="tel-style">0120-000-000</a></li>
+        </ul>
+      </div>
     </div>
   </header>
  
@@ -42,8 +50,8 @@
     <nav>
       <ul>
         <li><a href="index.html">トップページ</a></li>
-        <li><a href="process.html">大黒キムチができるまで</a></li>
-        <li><a href="#">関連会社</a></li>
+        <li><a href="process.html">こだわり</a></li>
+        <li><a href="associated.html">関連企業</a></li>
         <li><a href="company.html">会社概要</a></li>
       </ul>
     </nav>
