--- a/associated.html
+++ b/associated.html
@@ -61,49 +61,27 @@
 
   <div id="target"></div>
 
-  <section class="company">
+  <section class="associated">
     <div class="container">
-      <img src="img/header-company.png" alt="">
-      <table>
-        <tbody>
-          <tr>
-            <th>商号</th>
-            <td>幸Coo-Company21</td>
-          </tr>
-          <tr>
-            <th>事業開始</th>
-            <td>2022年4月</td>
-          </tr>
-          <tr>
-            <th>事業所所在地</th>
-            <td>〒000-0000<br>熊本県熊本市00-00</td>
-          </tr>
-          <tr>
-            <th>代表取締役</th>
-            <td>有馬 幸子</td>
-          </tr>
-          <tr>
-            <th>資本金</th>
-            <td>300万円</td>
-          </tr>
-          <tr>
-            <th>従業員数</th>
-            <td>00名</td>
-          </tr>
-          <tr>
-            <th>主な事業内容</th>
-            <td>通信販売サービス<br>エステサービス</td>
-          </tr>
-          <tr>
-            <th>主要取引先</th>
-            <td>ドテラ株式会社<br>キムチ専門店大黒</td>
-          </tr>
-          <tr>
-            <th>問合せ番号</th>
-            <td>0120-000-000</td>
-          </tr>
-        </tbody>
-      </table>
+      <img src="img/header-associated.png" alt="">
+      <section>
+        <div class="pic">
+          <img src="img/brand1.png" alt="すごい特徴のイメージ">
+        </div>
+        <div class="desc">
+          <h2>アロマ販売</h2>
+          <p>アロマを販売しています。アロマを販売しています。アロマを販売しています。アロマを販売しています。</p>
+        </div>
+      </section>
+      <section>
+        <div class="pic">
+          <img src="img/brand1.png" alt="すごい特徴のイメージ">
+        </div>
+        <div class="desc">
+          <h2>アロマ販売</h2>
+          <p>アロマを販売しています。アロマを販売しています。アロマを販売しています。アロマを販売しています。</p>
+        </div>
+      </section>
     </div>
   </section>
 
