--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="pc-menu">
         <ul>
           <li><a href="process.html">こだわり</a></li>
-          <li><a href="associated.html">関連企業</a></li>
+          <li><a href="associated.html">事業紹介</a></li>
           <li><a href="company.html">会社概要</a></li>
           <li><a href="tel:0120-000-000" class="tel-style">0120-000-000</a></li>
         </ul>
@@ -51,7 +51,7 @@
       <ul>
         <li><a href="index.html">トップページ</a></li>
         <li><a href="process.html">こだわり</a></li>
-        <li><a href="associated.html">関連企業</a></li>
+        <li><a href="associated.html">事業紹介</a></li>
         <li><a href="company.html">会社概要</a></li>
       </ul>
     </nav>
