--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
           </li>
         </ul>
       </nav>
-      <div class="pc-menu">
+      <nav class="pc-menu">
         <ul>
           <li><a href="process.html">こだわり</a></li>
           <li><a href="associated.html">事業紹介</a></li>
           <li><a href="company.html">会社概要</a></li>
           <li><a href="tel:0120-000-000" class="tel-style">0120-000-000</a></li>
         </ul>
-      </div>
+      </nav>
     </div>
   </header>
  
