--- a/process.html
+++ b/process.html
@@ -11,56 +11,57 @@
 </head>
 <body>
 
-  <header>
-    <div class="container">
-      <a href="index.html">
-        <h1>
-          <img src="img/logo.png" alt="幸-Coo Company" width="75" height="75">
-        </h1>
-      </a>
-      <nav class="sp-menu">
-        <ul>
-          <li>
-            <a href="tel:0120-000-000">
-              <i class="bi bi-telephone"></i>
-              TEL
-            </a>
-          </li>
-          <li>
-            <a href="#" id="open-menu">
-              <i class="bi bi-list"></i>
-              MENU
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <nav class="pc-menu">
-        <ul>
-          <li><a href="process.html">こだわり</a></li>
-          <li><a href="associated.html">事業紹介</a></li>
-          <li><a href="company.html">会社概要</a></li>
-          <li><a href="tel:0120-000-000" class="tel-style">0120-000-000</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
- 
-  <div class="overlay">
-    <i class="bi bi-x-circle" id="close-menu"></i>
-    <nav>
+<header>
+  <div class="container">
+    <a href="index.html">
+      <h1>
+        <img src="img/logo.png" alt="幸-Coo Company" width="75" height="75">
+      </h1>
+    </a>
+    <nav class="sp-menu">
       <ul>
-        <li><a href="index.html">トップページ</a></li>
+        <li>
+          <a href="tel:0120-000-000">
+            <i class="bi bi-telephone"></i>
+            TEL
+          </a>
+        </li>
+        <li>
+          <a href="#" id="open-menu">
+            <i class="bi bi-list"></i>
+            MENU
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <nav class="pc-menu">
+      <ul>
         <li><a href="process.html">こだわり</a></li>
         <li><a href="associated.html">事業紹介</a></li>
         <li><a href="company.html">会社概要</a></li>
+        <li><a href="tel:0120-000-000" class="tel-style">0120-000-000</a></li>
       </ul>
     </nav>
   </div>
+</header>
 
-  <div class="mask disable"></div>
+<div class="overlay">
+  <i class="bi bi-x-circle" id="close-menu"></i>
+  <nav>
+    <ul>
+      <li><a href="index.html">トップページ</a></li>
+      <li><a href="process.html">こだわり</a></li>
+      <li><a href="associated.html">事業紹介</a></li>
+      <li><a href="company.html">会社概要</a></li>
+    </ul>
+  </nav>
+</div>
 
-  <div id="target"></div>
+<div class="mask disable"></div>
 
+<div id="target"></div>
+
+<main>
   <section class="process">
     <div class="container">
       <img src="img/intro.png" alt="大黒のキムチができるまで" class="intro">
@@ -110,12 +111,13 @@
     <p><a href="tel:0120-000-000">0120-000-000</a></p>
     <a href="#" class="btn">ネット注文はこちら</a>
   </section>
+</main>
 
-  <footer class="copyright">
-    <small>&copy; Coo Company21</small>
-  </footer>
+<footer class="copyright">
+  <small>&copy; Coo Company21</small>
+</footer>
 
-  <a href="#" id="to_top"><i class="bi bi-arrow-up-square-fill"></i></a>
+<a href="#" id="to_top"><i class="bi bi-arrow-up-square-fill"></i></a>
 
 <script src="js/main.js"></script>
 </body>
