--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <div class="container">
     <a href="index.html">
       <h1>
-        <img src="img/logo.png" alt="幸-Coo Company" width="75" height="75">
+        <div>
+          <img src="img/logo.png" alt="幸-Coo Company" width="75" height="75">
+        </div>
       </h1>
     </a>
     <nav class="sp-menu">
