--- a/company.html
+++ b/company.html
@@ -46,13 +46,13 @@
 </header>
 
 <div class="overlay">
-  <i class="bi bi-x-circle" id="close-menu"></i>
+  <h1>MENU</h1>
   <nav>
     <ul>
-      <li><a href="index.html">トップページ</a></li>
-      <li><a href="process.html">こだわり</a></li>
-      <li><a href="associated.html">事業紹介</a></li>
-      <li><a href="company.html">会社概要</a></li>
+      <li><a href="index.html">トップページ<i class="bi bi-chevron-right"></i></a></li>
+      <li><a href="process.html">こだわり<i class="bi bi-chevron-right"></i></a></li>
+      <li><a href="associated.html">事業紹介<i class="bi bi-chevron-right"></i></a></li>
+      <li><a href="company.html">会社概要<i class="bi bi-chevron-right"></i></a></li>
     </ul>
   </nav>
 </div>
@@ -65,7 +65,7 @@
 
   <section class="company">
     <div class="container">
-      <img src="img/header-company.png" alt="">
+      <img src="img/header-company.png" alt="" width="">
       <table>
         <tbody>
           <tr>
