--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <ul>
         <li><a href="process.html">こだわり</a></li>
         <li><a href="associated.html">事業紹介</a></li>
-        <li><a href="company.html">会社概要</a></li>
+        <li><a href="company.html">会社案内</a></li>
         <li><a href="tel:0120-000-000" class="tel-style">0120-000-000</a></li>
       </ul>
     </nav>
@@ -52,7 +52,7 @@
       <li><a href="index.html">トップページ<i class="bi bi-chevron-right"></i></a></li>
       <li><a href="process.html">こだわり<i class="bi bi-chevron-right"></i></a></li>
       <li><a href="associated.html">事業紹介<i class="bi bi-chevron-right"></i></a></li>
-      <li><a href="company.html">会社概要<i class="bi bi-chevron-right"></i></a></li>
+      <li><a href="company.html">会社案内<i class="bi bi-chevron-right"></i></a></li>
     </ul>
   </nav>
 </div>
