--- a/associated.html
+++ b/associated.html
@@ -37,8 +37,9 @@
     <nav class="pc-menu">
       <ul>
         <li><a href="process.html">こだわり</a></li>
-        <li><a href="associated.html">事業紹介</a></li>
-        <li><a href="company.html">会社案内</a></li>
+        <li><a href="cuisine.html">お料理紹介</a></li>
+        <li><a href="associated.html">事業案内</a></li>
+        <li><a href="company.html">会社概要</a></li>
         <li><a href="tel:0120-000-000" class="tel-style">0120-000-000</a></li>
       </ul>
     </nav>
@@ -51,8 +52,9 @@
     <ul>
       <li><a href="index.html">トップページ<i class="bi bi-chevron-right"></i></a></li>
       <li><a href="process.html">こだわり<i class="bi bi-chevron-right"></i></a></li>
-      <li><a href="associated.html">事業紹介<i class="bi bi-chevron-right"></i></a></li>
-      <li><a href="company.html">会社案内<i class="bi bi-chevron-right"></i></a></li>
+      <li><a href="cuisine.html">お料理紹介<i class="bi bi-chevron-right"></i></a></li>
+      <li><a href="associated.html">事業案内<i class="bi bi-chevron-right"></i></a></li>
+      <li><a href="company.html">会社概要<i class="bi bi-chevron-right"></i></a></li>
     </ul>
   </nav>
 </div>
