--- a/cuisine.html
+++ b/cuisine.html
@@ -65,49 +65,21 @@
 
 <main>
 
-  <section class="company">
-    <div class="container">
-      <img src="img/header-company.png" alt="" width="">
-      <table>
-        <tbody>
-          <tr>
-            <th>商号</th>
-            <td>幸Coo-Company21</td>
-          </tr>
-          <tr>
-            <th>事業開始</th>
-            <td>2022年4月</td>
-          </tr>
-          <tr>
-            <th>事業所所在地</th>
-            <td>〒000-0000<br>熊本県熊本市00-00</td>
-          </tr>
-          <tr>
-            <th>代表取締役</th>
-            <td>有馬 幸子</td>
-          </tr>
-          <tr>
-            <th>資本金</th>
-            <td>100万円</td>
-          </tr>
-          <tr>
-            <th>従業員数</th>
-            <td>00名</td>
-          </tr>
-          <tr>
-            <th>主な事業内容</th>
-            <td>通信販売サービス<br>エステサービス</td>
-          </tr>
-          <tr>
-            <th>主要取引先</th>
-            <td>ドテラ株式会社<br>キムチ専門店大黒</td>
-          </tr>
-          <tr>
-            <th>問合せ番号</th>
-            <td>0120-000-000</td>
-          </tr>
-        </tbody>
-      </table>
+  <section class="cuisene">
+    <div class="container garally">
+
+      <img src="img/cuisine01.jpg" alt="">
+      <img src="img/cuisine02.jpg" alt="">
+      <img src="img/cuisine03.jpg" alt="">
+      <img src="img/cuisine03.jpg" alt="">
+      <img src="img/cuisine03.jpg" alt="">
+      <img src="img/cuisine03.jpg" alt="">
+      <img src="img/cuisine03.jpg" alt="">
+      <img src="img/cuisine03.jpg" alt="">
+      <img src="img/cuisine03.jpg" alt="">
+      <img src="img/cuisine03.jpg" alt="">
+      <img src="img/cuisine03.jpg" alt="">
+
     </div>
   </section>
 
