--- a/company.html
+++ b/company.html
@@ -21,7 +21,7 @@
     <nav class="sp-menu">
       <ul>
         <li>
-          <a href="tel:0120-000-000">
+          <a href="tel:090-9404-1903">
             <i class="bi bi-telephone"></i>
             TEL
           </a>
@@ -40,7 +40,7 @@
         <li><a href="cuisine.html">お料理紹介</a></li>
         <li><a href="associated.html">事業案内</a></li>
         <li><a href="company.html">会社概要</a></li>
-        <li><a href="tel:0120-000-000" class="tel-style">0120-000-000</a></li>
+        <li><a href="tel:090-9404-1903" class="tel-style">090-9404-1903</a></li>
       </ul>
     </nav>
   </div>
@@ -76,11 +76,11 @@
           </tr>
           <tr>
             <th>事業開始</th>
-            <td>2022年4月</td>
+            <td>2022年7月</td>
           </tr>
           <tr>
             <th>事業所所在地</th>
-            <td>〒000-0000<br>熊本県熊本市00-00</td>
+            <td>〒869-1236<br>熊本県菊池郡大津町杉水2725-1</td>
           </tr>
           <tr>
             <th>代表取締役</th>
@@ -91,12 +91,8 @@
             <td>100万円</td>
           </tr>
           <tr>
-            <th>従業員数</th>
-            <td>00名</td>
-          </tr>
-          <tr>
             <th>主な事業内容</th>
-            <td>通信販売サービス<br>エステサービス</td>
+            <td>キムチ等の通信販売・店頭販売<br>アロマ・リンパリラクゼーションサービス</td>
           </tr>
           <tr>
             <th>主要取引先</th>
@@ -104,7 +100,7 @@
           </tr>
           <tr>
             <th>問合せ番号</th>
-            <td>0120-000-000</td>
+            <td>090-9404-1903</td>
           </tr>
         </tbody>
       </table>
@@ -113,7 +109,7 @@
 
   <section class="call-to-action">
     <h1>お電話でのご注文はこちら</h1>
-    <p><a href="tel:0120-000-000">0120-000-000</a></p>
+    <p><a href="tel:090-9404-1903">090-9404-1903</a></p>
     <a href="#" class="btn">ネット注文はこちら</a>
   </section>
   
