--- a/associated.html
+++ b/associated.html
@@ -73,12 +73,12 @@
         </div>
         <div class="desc">
           <h2>キムチ等の通信販売・店頭販売</h2>
-          <p>アロマを販売しています。アロマを販売しています。アロマを販売しています。アロマを販売しています。</p>
+          <p>キムチを販売しています。キムチを販売しています。キムチを販売しています。キムチを販売しています。</p>
         </div>
       </section>
       <section>
         <div class="pic">
-          <img src="img/brand1.png" alt="すごい特徴のイメージ">
+          <img src="img/brand2.png" alt="すごい特徴のイメージ">
         </div>
         <div class="desc">
           <h2>アロマ・リンパリラクゼーションサービス</h2>
