--- a/cuisine.html
+++ b/cuisine.html
@@ -71,12 +71,12 @@
       <article>
         <img src="img/cuisine01.jpg" alt="">
         <div>
-          <h1>料理名</h1>
+          <h1>ホルモンのキムチ炒め 温玉付き</h1>
           <p>
-            使用した材料その１<br>
-            使用した材料その２<br>
-            使用した材料その３<br>
-            使用した材料その４
+            白菜キムチ(当店の品)…200g<br>
+            豚ホルモン(当店の品)…170g<br>
+            コチュジャン…お好みで<br>
+            トッピング…小ネギ、温泉たまご
           </p>
         </div>
       </article>
@@ -84,64 +84,13 @@
       <article>
         <img src="img/cuisine02.jpg" alt="">
         <div>
-          <h1>料理名</h1>
+          <h1>馬ホルモンとニンニクの芽の鉄板炒め</h1>
           <p>
-            使用した材料その１<br>
-            使用した材料その２<br>
-            使用した材料その３<br>
-            使用した材料その４
-          </p>
-        </div>
-      </article>
-
-      <article>
-        <img src="img/cuisine03.jpg" alt="">
-        <div>
-          <h1>料理名</h1>
-          <p>
-            使用した材料その１<br>
-            使用した材料その２<br>
-            使用した材料その３<br>
-            使用した材料その４
-          </p>
-        </div>
-      </article>
-
-      <article>
-        <img src="img/cuisine03.jpg" alt="">
-        <div>
-          <h1>料理名</h1>
-          <p>
-            使用した材料その１<br>
-            使用した材料その２<br>
-            使用した材料その３<br>
-            使用した材料その４
-          </p>
-        </div>
-      </article>
-
-      <article>
-        <img src="img/cuisine03.jpg" alt="">
-        <div>
-          <h1>料理名</h1>
-          <p>
-            使用した材料その１<br>
-            使用した材料その２<br>
-            使用した材料その３<br>
-            使用した材料その４
-          </p>
-        </div>
-      </article>
-
-      <article>
-        <img src="img/cuisine03.jpg" alt="">
-        <div>
-          <h1>料理名</h1>
-          <p>
-            使用した材料その１<br>
-            使用した材料その２<br>
-            使用した材料その３<br>
-            使用した材料その４
+            馬ホルモン(当店の品)…170g<br>
+            にんにくの芽…お好みで<br>
+            味噌…小さじ１<br>
+            塩コショウ…少々<br>
+            トッピング…糸唐辛子、温泉たまご
           </p>
         </div>
       </article>
@@ -165,7 +114,7 @@
   <section class="call-to-action">
     <h1>お電話でのご注文はこちら</h1>
     <p><a href="tel:090-9404-1903">090-9404-1903</a></p>
-    <a href="#" class="btn">ネット注文はこちら</a>
+    <a href="https://coocompany21.base.shop/" class="btn" target="_blank">ネット注文はこちら</a>
   </section>
   
 </main>
