--- a/process.html
+++ b/process.html
@@ -111,7 +111,7 @@
   <section class="call-to-action">
     <h1>お電話でのご注文はこちら</h1>
     <p><a href="tel:090-9404-1903">090-9404-1903</a></p>
-    <a href="#" class="btn">ネット注文はこちら</a>
+    <a href="https://coocompany21.base.shop/" class="btn" target="_blank">ネット注文はこちら</a>
   </section>
 </main>
 
